# Rust_leptos_benchmarks

./: .gitignore  Cargo.toml  README.md  complexity_metrics.txt  index.html  lightHouse.html  lolz.json  old.rs  sonar-issues.json  sonar-project.properties
.sonar/: report-task.txt
src/: app.rs  main.rs  output.css
src/components/: div_rendering.rs  image_carousel.rs  mod.rs  old_update.rs  static_list.rs
